(library
 (name mdexp_setup_mdexp)
 (package mdexp-actions)
 (inline_tests)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries print-table)
 (preprocess
  (pps ppx_expect)))

; Generate DIGESTS.md from digests.ml using mdexp

(rule
 (alias runtest)
 (action
  (diff DIGESTS.md DIGESTS.md.gen)))

(rule
 (package mdexp-actions)
 (action
  (with-stdout-to
   DIGESTS.md.gen
   (run %{bin:mdexp} pp %{dep:digests.ml}))))
