(lang dune 3.17)

(name mdexp-actions-test)

(generate_opam_files)

(license "MIT")

(authors "Mathieu Barbin")

(maintainers "Mathieu Barbin <opensource@mbarbin.org>")

(source
 (github mbarbin/mdexp-actions))

(implicit_transitive_deps false)

(package
 (name mdexp-actions-test)
 (synopsis "A test project to exercise the mdexp-actions repo")
 (depends
  (ocaml
   (>= 5.2))
  (ocamlformat
   (= 0.28.1))
  (ppx_expect
   (and
    (>= v0.17)
    (< v0.18)))
  (ppxlib
   (>= 0.33))
  (print-table
   (>= 0.1.0))))
